<resources>
    <string name="NetworkTitle">Houses</string>
    <string name="RoomsTitle">Rooms</string>
    <string name="action_settings">Settings</string>

    <string name="menu_houses">Houses</string>
    <string name="menu_consumption">Consumption</string>
    <string name="menu_manage">Manage</string>
    <string name="appName" translatable="false">Smart Home</string>
    <string name="title_houses">Houses</string>
    <string name="title_manage">Manage</string>
    <string name="title_consumption">Consumption</string>
    <string name="app_name" translatable="false">Smart Home</string>
    <string name="owner">Owner</string>
    <string name="name">Name</string>
    <string name="menu_home">Houses</string>
    <string name="userId">User ID</string>
    <string name="firstName">First name</string>
    <string name="username">Username</string>
    <string name="email" translatable="false">Email</string>
    <string name="title_activity_register">Register</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="notImplementedMessage">Warning: not implemented yet!</string>
    <string name="register">Register</string>
    <string name="ownedDevices">Owned devices</string>
    <string name="createAccount">Create new account</string>
    <string name="password">Password</string>
    <string name="missingValuesInFields">Warning: missing values in fields</string>
    <string name="signinSucces">Succesfully signed in</string>
    <string name="signoutSucces">Succesfully logged out</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Log out</string>
    <string name="myAccount">My account</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="title_activity_log_out">LogOutActivity</string>
    <string name="redirectedToLogin">You will be redirected to login</string>
    <string name="addNewHouse">Add new house</string>
    <string name="add">Add</string>
    <string name="responseErrorCode"><![CDATA[\"Error! --> Responsecode: \"]]></string>
    <string name="rooms">Rooms</string>
    <string name="addRoomToHouse">Add room to house</string>
    <string name="roomDefaultTitle">room title</string>
    <string name="deviceCategory">Device category</string>
    <string name="devices">Devices</string>
    <string name="addNewDevice">Add new device</string>
    <string name="bigElectroType">Type</string>
    <string name="deviceCategories" />
    <string name="sensorType">Sensor type</string>
    <string name="deviceType">Device type</string>
    <string name="deviceRoomLabel">Room:</string>
    <string name="deviceStatusLabel">status:</string>
    <string name="deviceCategoryLabel">Category:</string>
    <string name="deviceTypeLabel">"Type: "</string>
    <string name="deviceProgramLabel">"Program: "</string>
    <string name="deviceTempLabel">Temperature:</string>
    <string name="deviceTimerLabel">Timer:</string>
    <string name="deviceVolumeLabel">"Volume: "</string>
    <string name="deviceSensorTypeLabel">"Sensor type: "</string>
    <string name="deviceSensorDataLabel">Sensor data:</string>
    <string name="onOff">On/Off</string>
    <string name="addUsers">Add users</string>
    <string name="users">Users</string>
    <string name="title_rooms">Rooms</string>
    <string name="role">Role</string>
    <string name="addUserToHouse">Add user to house</string>
    <string name="deviceStatusChangeSucces">Device status changed succesfully</string>
    <string name="deleteConfirmation">Confirm delete</string>
    <string name="deleteConfMessage">Are you sure you want to delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="consumption">Consumption</string>
    <string name="user">User</string>
    <string name="deviceNameChangeSucces">Succesfully changed devices name</string>
    <string name="invalidCredits">Invalid credentials</string>
    <string name="byHouse">By house</string>
    <string name="promovateUserForHouse">Promovate user to admin</string>
    <string name="house">House: </string>
    <string name="userPromotedSucces">User succesfully promoted</string>
    <string name="swipeInfo">Swipe right to promote, swipe left to remove</string>
    <string name="userAccessChangedSucces">User access changed succesfully</string>
    <string name="emailPlaceholder" translatable="false">~email</string>
    <string name="namePlaceholder">~name</string>
    <string name="firstnamePlaceholder">~firstname</string>
    <string name="usernamePlaceholder">~username</string>
    <string name="admin">Admin</string>
</resources>