<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/house_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:padding="16dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="81dp">

        <TextView
            android:id="@+id/user_userame"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:text="@string/username"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/dark_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/user_firstName"
            android:layout_width="101dp"
            android:layout_height="20dp"
            android:text="@string/firstName"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/dark_blue"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="264dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/house_name"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginEnd="8dp"
            android:text="@string/name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/dark_blue"
            app:layout_constraintEnd_toStartOf="@+id/user_firstName"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/user_email"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:text="@string/email"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/dark_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/house_name"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="46dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>